--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 </head>
 <body class="bg-danger-subtle">
     
-<div class="container link-danger">
-    <div class="box">
-        <div class="user_list" id="user_list">
+<div class="container">
+    <div class="box alert-link ">
+        <div class="user_list border-danger-subtle border-3 mt-2 bg-danger-subtle link-danger" id="user_list">
             <!-- ici on va afficher la liste des utilisateurs -->
         </div>
 
-        <div class="message">
+        <div class="message border-danger-subtle border-3 mt-2">
             <div id="discution">
                 
             </div>
-            <form id="messageForm">
-                <input type="text" id="message">
-                <button id="action" value="send message">envoyer</button>
+            <form  id="messageForm">
+                <input class="messageForm border-danger-subtle border-3 mt-2" type="text" id="message">
+                <button class="btn btn-danger" id="action" value="send message">envoyer</button>
             </form>
         </div>
     </div>
